# verdant-siege

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon.rc  main.cpp  run.ps1
devlog/: ProjectStructure.md  README.md
devlog/entries/: 2026-03-14-setup.md  2026-03-15-player-setup.md  2026-03-17-camera.md  2026-03-24-Physics.md  2026-04-02-Physics-System-&-Ground-Collision.md
include/: Background.h  Camera.h  Collider.h  Engine.h  InputHandler.h  ParallaxBackground.h  PhysicsWorld.h  Player.h  RigidBody.h  World.h
src/: Background.cpp  Camera.cpp  Collider.cpp  Engine.cpp  InputHandler.cpp  Parallaxbackground.cpp  PhysicsWorld.cpp  Player.cpp  RigidBody.cpp  World.cpp
